# LP-MDS-Ontology-Mapper

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yml  env.template  pyproject.toml
.github/workflows/: release.yml  test.yml
daniel/: 0_pbg_datensteckbrief.ipynb
docker/: Dockerfile  README.md  compose.yml  env.template
docker/jobapi/: compose.yml  env.template
edp/: __init__.py  __main__.py  config.py  context.py  date_time_column.py  env.template  file.py  main.py  numeric_column.py  schema.py  server.py  service.py  task.py  types.py  zip.py
edp/analyzers/: __init__.py  base.py  pandas.py
edp/analyzers/pandas/: __init__.py  type_parser.py
edp/api/: __init__.py  dataspace.py
edp/compression/: __init__.py  base.py  zip.py
edp/importers/: __init__.py  pandas.py  python.py
edp/job/: README.md  __init__.py  api.py  manager.py  repo.py  types.py
edp/job/repo/: __init__.py  base.py  inmemory.py  persistent.py
edp/pontusx/: README.md  __main__.py  args.py  service.py
edp/styles/: plot.mplstyle
edps/: __main__.py  date_time_column.py  edp_first.json  edps.py  string_column.py
edps/schema/: edp.json  edp_schema.json  pydantic_schema.py
schema/: edp_schema.json  pydantic_schema.py
scripts/: README.md  build_docker.sh  build_wheel.sh  start_jobapi.sh  stop_jobapi.sh
src/edps/: __init__.py  context.py  file.py  filewriter.py  importers.py  service.py  task.py  taskcontext.py  taskcontextimpl.py  taskimpl.py  types.py
src/edps/analyzers/: __init__.py  audio.py  base.py  common.py  docx.py  media.py  pdf.py  python.py  video.py
src/edps/analyzers/images/: __init__.py  importer.py  ocr.py
src/edps/analyzers/pandas/: __init__.py  fitter.py  seasonality.py  temporal_consistency.py  type_parser.py
src/edps/analyzers/semi_structured/: __init__.py
src/edps/analyzers/structured/: __init__.py  fitter.py  importer.py  result_keys.py  seasonality.py  temporal_consistency.py  type_parser.py
src/edps/analyzers/unstructured_text/: __init__.py  chunk.py  language.py
src/edps/analyzers/videos/: __init__.py  importer.py
src/edps/compression/: __init__.py  base.py  zip.py
src/edps/importers/: __init__.py  archive.py  docx.py  images.py  pandas.py  pdf.py  python.py  semi_structured.py  structured.py  unstructured_text.py  videos.py
src/edps/report/: __init__.py  base.py  html.py  pdf.py
src/edps/report/templates/: ds_archive.html.jinja  ds_audio.html.jinja  ds_document.html.jinja  ds_image.html.jinja  ds_semistructured.html.jinja  ds_structured.html.jinja  ds_unstructured.html.jinja  ds_video.html.jinja  report.html.jinja  styles.html.jinja  utils.html.jinja
src/jobapi/: README.md  __init__.py  __main__.py  api.py  config.py  env.template  exception.py  manager.py  types.py
src/jobapi/repo/: __init__.py  base.py  inmemory.py  persistent.py
src/mds_mapper/: __init__.py  file.py  service.py  types.py  version.py
src/mds_mapper/compression/: __init__.py  zip.py
src/mds_mapper/rest_api/: README.md  __init__.py  __main__.py  api.py  config.py  env.template  manager.py  types.py
src/mds_mapper/rest_api/repo/: __init__.py  base.py  inmemory.py  persistent.py
src/pontusx/: README.md  __main__.py  args.py  metadata.py  service.py
tests/: conftest.py  test_edps.py  test_rest_api.py  test_service.py  test_task.py  test_types.py
tests/analyzers/: test_determine_types.py  test_pandas.py
tests/compression/: test_zip.py
tests/data/: bast.csv  edp_csv.json  edp_pdf.json  german_decimal_comma.csv  hamburg.csv  test.aac  test.avi  test.csv  test.docx  test.flac  test.flv  test.json  test.m4a  test.mkv  test.mov  test.opus  test.pickle  test.tif  test.tiff  test.wma  test.wmv  test.xls  test.xlsx  test_counts.csv  test_extra_headers.csv  test_headerless.csv  test_missing_headers.csv  test_with_normalization.json  unstructured_text_only.txt  unstructured_text_with_table.txt
tests/data/language/: deu_eng_wiki_llm.txt  deu_wiki_llm.txt
tests/data/pontusx/: algoCustomData.json  ddo.json
tests/edps/: test_doc.py  test_edps.py  test_file.py  test_task.py  test_types.py
tests/edps/analyzers/: test_common.py  test_determine_types.py  test_fitter.py  test_images.py  test_ocr.py  test_pandas.py  test_pdf.py  test_structured.py  test_unstructured.py  test_unstructured_text.py  test_videos.py
tests/edps/compression/: test_zip.py
tests/edps/importers/: test_images.py  test_pandas.py  test_structured.py  test_unstructured_text.py  test_videos.py
tests/edps/report/: test_report.py
tests/importers/: test_pandas.py
tests/jobapi/: test_api.py
tests/pontusx/: test_pontusx_cli.py
