[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "edps"
dynamic = ["version"]
authors = [
    { name = "Michael Wielpuetz", email = "mw@beebucket.de" },
    { name = "Daniel Eckstein", email = "de@beebucket.de" },
    { name = "Joshua Lauterbach", email = "jl@beebucket.de" },
]
description = "Beebucket application to create Enhanced Dataset Profiles."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "argparse",
    "extended_dataset_profile @ git+https://github.com/Beebucket/extended_dataset_profile@0.16.0",
    "boto3",
    "filetype",
    "lingua-language-detector",
    "matplotlib",
    "numpy",
    "pandas",
    "pathlib",
    "pydantic",
    "pydantic-settings",
    "python-iso639",
    "seaborn",
    "statsmodels",
    "requests",
    "fastapi[standard]",
    "clevercsv>=0.8.2",
    "openpyxl",
    "xlrd",
    "sqlmodel",
    "pg8000",
    "pillow",
    "opencv-python",
    "scikit-image",
    "brisque",
    "PyWavelets",
    "pypdf",
    "python-docx",
    "torch",
    "torchvision",
    "easyocr",
    "python-ffmpeg",
    "static-ffmpeg",
    "genson",
]

[project.scripts]
edps_export_openapi_schema = "jobapi.__main__:cmdline_export_openapi_schema"
edps_jobapi = "jobapi.__main__:main"
edps_pontusx = "pontusx.__main__:main"

[project.optional-dependencies]
test = [
    "boto3-stubs[boto3]",
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "mypy",
    "pandas-stubs",
    "scipy-stubs",
    "types-seaborn",
    "types-requests",
    "ruff>=0.7.4",
    "pre-commit>=4.0.1",
    "pip-licenses>=5.0.0",
]
dev = ["edps[test]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"edps" = ["styles/*.mplstyle"]

[tool.setuptools.dynamic]
version = { file = "dist/VERSION.txt" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I", # isort replacement
    "S", # bandit
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s | %(levelname)s | %(name)s | %(pathname)s:%(lineno)d | - %(message)s"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "error",
    "ignore::matplotlib._api.deprecation.MatplotlibDeprecationWarning",
    "ignore::DeprecationWarning:libsvm.svm",
]
markers = ["slow: Tests that may take more than a few seconds."]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = ["build", ".venv"]
check_untyped_defs = true
sqlite_cache = true
cache_fine_grained = true

[[tool.mypy.overrides]]
module = [
    "filetype",
    "statsmodels.*",
    "brisque.*",
    "easyocr",
    "ffmpeg",
    "static_ffmpeg",
    "genson",
]
ignore_missing_imports = true

[tool.pip-licenses]
from = "classifier"
ignore-packages = [
    "edps",
    "chardet",
    "extended-dataset-profile",
    "libsvm-official",
    "torchvision",
    "easyocr",
]
partial-match = true

[tool.uv.sources]
torch = [
    { index = "pypi", marker = "sys_platform == 'win32'" },
    { index = "pytorch-unix", marker = "sys_platform != 'win32'" },
]
torchvision = [
    { index = "pypi", marker = "sys_platform == 'win32'" },
    { index = "pytorch-unix", marker = "sys_platform != 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-unix"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.python.org/simple"
default = true
